@@ -1,3 +1,4 @@
+1/30/13 implement important bits of Java's MessageFormat for i18n using patterns
 1/30/13 add tick marks to BeakerNode
 1/28/13 add BeakerNode (no ticks yet)
 1/28/13 i18n of titles
